# Start_of_C

./: CMakeLists.txt  README.md  dynamicArray.cpp  dynamicArray.sln  dynamicArray.vcxproj  main.c  ocollection.h  ovector.c  ovector.h  test_functions.c  test_functions.h
Debug/: dynamicArray.exe.recipe  dynamicArray.ilk  dynamicArray.vcxproj.FileListAbsolute.txt  dynamicarray.obj.enc  vc143.idb
Debug/dynamicArray.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  dynamicArray.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
apps/: CMakeLists.txt  app.c
docs/: mainpage.md
include/modern/: ovector.h
src/: CMakeLists.txt  ovector.c
tests/: CMakeLists.txt  ovectorTest.c
x64/Debug/: dynamicArray.exe.recipe  dynamicArray.ilk  dynamicArray.vcxproj.FileListAbsolute.txt  dynamicarray.obj.enc  vc143.idb
x64/Debug/dynamicArray.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  dynamicArray.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
